[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.23.0",
    "librosa>=0.11.0",
    "moviepy>=2.2.1",
    "mutagen>=1.47.0",
    "numpy>=2.2.6",
    "openai>=1.93.0",
    "sift-stack-py>=0.7.0",
    "streamlit>=1.46.1",
]
